14_multi-cluster/14.4/servicedentry-recommendation.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: recommendation
spec:
  hosts:
  - recommendation.weather.svc.cluster.local
  location: MESH_INTERNAL
  ports:
  - number: 3005
    name: http
    protocol: HTTP
  resolution: STATIC
  workloadSelector:
    labels:
      app: recommendation
      version: v1
